# lahoda-xyz

./: .aider.chat.history.md  .gitattributes  .gitignore  .mergify.yml  .~lock.cv.odt#  How IBC-ICS20 and XCM can be encoded during transfers.md  How to open Dotsama XCMP HRMP channel.md  Untitled-1.json  base64  bb.typ  bio.txt  composable.md  cv.odt  eth.hs  fin.hs  flake.nix  flat.md  flexible-staking-pool.md  git - Shortcut.lnk  help-using-installed-nix.md  home.nix  ibc.hs  identifiers.md  inbox.md  nginx..socket.conf  nginx.conf  ordebook.py  ping.plantuml  readme.md  risk-v.md  rules.md  rust-toolchain.toml  storage.hs  system76-oryx-4k-2023-popos.nix  todo.txt  vs-shortcuts.hs  what-helps.md  workstation.nix  xcvm.md
.continue/: config.yaml
articles/:  How IBC-ICS20 and XCM can be encoded during transfers.md  Dotsama governance.md  Dotsama testing.md  How to open Dotsama XCMP channel.md  How to upgrade depenendencies Dotstama Cumulus Substrate.md  how-to-eat-less.md  manipulation.md  my-llm-usage.md  nats.md  war.md
awesome/: xc.md
content/: [DRAFT]how-to-protect-windows.md
lahoda-eth/: computations.md  console.md  index.md  key-scheme.md  practical-lisp-machine.md
learning/: .gitignore  .gitmodules  diagrams.md  dotnet.md  git-protocols.md  lay-face-down  (+3 more)
learning/languages/rust/blockchain/example-rust/lacoin/: Cargo.toml
learning/languages/rust/blockchain/example-rust/lacoin/src/: lib.rs
learning/rust/experiments/asdsa/: Cargo.toml  sd.rs
learning/rust/experiments/asdsa/libs/procm/: Cargo.toml
learning/rust/experiments/asdsa/src/: lib.rs
(+1857 files in other folders)
